--- a/UpSchoolProject1/Web.config
+++ b/UpSchoolProject1/Web.config
@@ -15,6 +15,12 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <authentication mode="Forms">  <!--bu olmazsa login başarılı olsa bile redirect yapmayacak-->
+      <forms loginUrl="/Login/Index/"></forms>  <!--unauthorize-->
+    </authentication>
+    <customErrors mode="On">
+      <error statusCode="404" redirect="/Error/Page404/"/>
+    </customErrors>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
